--- a/package.json
+++ b/package.json
@@ -11,14 +11,21 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^15.2.0",
+    "@angular/cdk": "^15.2.6",
     "@angular/common": "^15.2.0",
     "@angular/compiler": "^15.2.0",
     "@angular/core": "^15.2.0",
+    "@angular/fire": "^7.5.0",
+    "@angular/flex-layout": "^15.0.0-beta.42",
     "@angular/forms": "^15.2.0",
+    "@angular/material": "^15.2.6",
     "@angular/platform-browser": "^15.2.0",
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
+    "auth0-js": "^9.20.2",
+    "hammerjs": "^2.0.8",
     "rxjs": "~7.8.0",
+    "rxjs-compat": "^6.6.7",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
   },
@@ -26,6 +33,7 @@
     "@angular-devkit/build-angular": "^15.2.5",
     "@angular/cli": "~15.2.5",
     "@angular/compiler-cli": "^15.2.0",
+    "@types/auth0-js": "^9.14.7",
     "@types/jasmine": "~4.3.0",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
